Implement API filtering for value objects & perf. tweaks
- Fixes #137
- Value objects now have a site_id attribute that is hidden and
  automatically populated by their parent Attribtue, similarly to
  Interface objects and their parent Device.
- New API endpoint: `/api/sites/:site_id/values/`
- Improved performance when creating/updating Interface objects by not
  explicitly looking up the parent Device object EVERY time.
- New functionality is unit-tested

--- a/nsot/static/src/templates/site.html
+++ b/nsot/static/src/templates/site.html
@@ -164,7 +164,7 @@
                         <tbody>
                             <tr ng-repeat="change in changes">
                                 <td>
-                                    <a ng-href="/sites/[[siteId]]/changes/[[change.id]]">
+                                    <a ng-href="/sites/[[site.id]]/changes/[[change.id]]">
                                         [[change.id]]
                                     </a>
                                 </td>
