Restangular first pass.

--- a/nsot/templates/ui/scripts.html
+++ b/nsot/templates/ui/scripts.html
@@ -12,5 +12,6 @@
 <script src="/static/build/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/static/build/vendor/moment/min/moment.min.js"></script>
 <script src="/static/build/vendor/angular-chart.js/dist/angular-chart.js"></script>
+<script src="/static/build/vendor/restangular/dist/restangular.js"></script>
 
 <script src="/static/build/js/app.min.js"></script>
