Implemented pagination for changes (proof-of-concept)...
- Working create attribute w/ redirect to detail view
- Working delete attribute w/ redirect to list view
- Placeholders for "loading" state implemented for device list/detail
  views
- Added materialize.css as a dependency. We'll see if we keep using
  it...

--- a/react-15.1.0/ui/templates/app.html
+++ b/react-15.1.0/ui/templates/app.html
@@ -9,7 +9,8 @@
     <!--
     <link rel="stylesheet" type="text/css" href="css/main.css">
     -->
-    <link rel="stylesheet" type="text/css" href="http://www.material-ui.com/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
     <title>Network Source of Truth | Devices</title>
     <style>
       .app {
@@ -27,6 +28,44 @@
       main {
         flex: 1;
       }
+
+.pagination ul {
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.pagination li {
+    display: inline-block;
+}
+
+.pagination .break a {
+    cursor: default;
+}
+
+body, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+body {
+  font-size: 15px;
+  line-height: 24px;
+}
+
+a {
+  color: #ff4081;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+html {
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
     </style>
   </head>
 
